[project]
name = "alphanest-agent"
version = "0.1.0"
description = "An intelligent investment research agent for U.S. stock market opportunities."
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agentMain", "tools"]
