[project]
name = "alphanest-agent"
version = "0.1.0"
description = "An intelligent investment research agent for U.S. stock market opportunities."
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
    "pydantic-ai",
    "python-dotenv",
    "yfinance>=1.4.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agent_core", "agent_cli", "agent_web_api", "tools"]
